--- a/front/index.html
+++ b/front/index.html
@@ -6,18 +6,17 @@
     <link rel="stylesheet" type="text/css" href="style.scss">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body>
+<body x-data="{ selected: 'open_0', open: localStorage.getItem('token'), mail: localStorage.getItem('mail'),  dropdown: false}">
     <!-- POPUP -->
-    <div class="popup hidden" x-data="{ selected: 'open_0' }">
+    <div class="popup" data-ref="popup" x-show="open == null">
         <div class="popup__bar"></div>
         <div class="row h-full">
             <div class="col-12 col-md-5 h-full flex justify-center items-center">
                 <div class="popup__form flex flex-column" data-ref="signup" x-show="selected === 'open_0'">
                     <h2 class="text-primary-base text-xl text-center">Inscription</h2>
-                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="mail" placeholder="test@test.com"> 
-                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="password" placeholder="Password"> 
-                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="password" placeholder="Password"> 
-                    <button class="bg-primary-base py-3 w-48 mx-auto text-white my-2 rounded-full">Valider</button>
+                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="mail" placeholder="test@test.com" data-ref="registerLogin"> 
+                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="password" placeholder="Password" data-ref="registerPassword"> 
+                    <button class="bg-primary-base py-3 w-48 mx-auto text-white my-2 rounded-full" data-ref="registerSubmit">Valider</button>
                     <span class="h-2 w-10 bg-yellow-500 rounded-full my-4 mx-auto"></span>
                     <div class="flex justify-center">
                         <div class="text-primary-base cursor-pointer" @click="selected = 'open_1'">Connexion</div>
@@ -25,13 +24,13 @@
                 </div>
                 <div class="popup__form flex flex-column" data-ref="login" x-show="selected === 'open_1'">
                     <h2 class="text-primary-base text-xl text-center">Connexion</h2>
-                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="mail" placeholder="test@test.com"> 
-                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="password" placeholder="Password"> 
-                    <button class="bg-primary-base py-3 w-48 mx-auto text-white my-2 rounded-full">Valider</button>
+                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="mail" placeholder="test@test.com" data-ref="loginLogin"> 
+                    <input class="bg-primary-light rounded-full text-primary-base py-3 px-4 my-2 outline-none" type="password" placeholder="Password" data-ref="loginPassword"> 
+                    <button class="bg-primary-base py-3 w-48 mx-auto text-white my-2 rounded-full" data-ref="loginSubmit">Valider</button>
                     <span class="h-2 w-10 bg-yellow-500 rounded-full my-4 mx-auto"></span>
                     <div class="flex justify-between">
                         <div class="text-primary-base cursor-pointer" @click="selected = 'open_0'">Inscription</div>
-                        <div class="text-primary-base cursor-pointer" @click="selected = 'open_2'">Mot de passe oublié ?</div>
+                        <div class="text-primary-base cursor-pointer ml-2" @click="selected = 'open_2'">Mot de passe oublié ?</div>
                     </div>
                 </div>
                 <div class="popup__form flex flex-column" data-ref="recover" x-show="selected === 'open_2'">
@@ -66,14 +65,24 @@
             </div>
         </div>
         <div class="col-4 h-full pl-0">
-            <div class="topbar">
-                <div class="topbar__profile">
-                    <div class="topbar__profile__dropdown">
-                        <div></div>
+            <div class="topbar h-full">
+                <div class="topbar__profile h-full">
+                    <div class="topbar__profile__dropdown h-full flex justify-center items-center" x-show="open != null">
+                        <div class="topbar__profile__name text-primary-base font-bold cursor-pointer" x-text="mail" @click="dropdown = true">
+                        </div>
+                        <div class="topbar__profile__name__triangle"></div>
+                        <div class="dropdown w-64 bg-white" x-show="dropdown" @click.away="dropdown = false" x-transition:enter="transition ease-out duration-300">
+                            <ul class="my-2">
+                                <li class="inline border-b py-2 border-gray-600 flex justify-center items-center h-full text-primary-base cursor-pointer">Profil</li>
+                                <li  class="inline py-2 flex justify-center items-center h-full text-primary-base cursor-pointer" @click="localStorage.clear(); location.reload()">Déconnexion</li>
+                            </ul>
+                            
+                        </div>
                     </div>
                     <div class="topbar__profile__image"></div>
                 </div>
             </div>
+            <div data-ref="calendarSmall"></div> 
         </div>
     </div>
     <script src="index.ts"></script>
